@@ -23,6 +23,9 @@
 package org.xcsoar;
 
 import android.app.Activity;
+import android.app.Notification;
+import android.app.NotificationManager;
+import android.app.PendingIntent;
 import android.os.Bundle;
 import android.view.MotionEvent;
 import android.view.KeyEvent;
@@ -32,6 +35,7 @@ import android.widget.TextView;
 import android.os.Build;
 import android.os.PowerManager;
 import android.content.Context;
+import android.content.Intent;
 
 public class XCSoar extends Activity {
     private static NativeView nativeView;
@@ -84,6 +88,20 @@ public class XCSoar extends Activity {
                                   PowerManager.ACQUIRE_CAUSES_WAKEUP,
                                   "XCSoar");
         wakeLock.acquire();
+
+        /* add an icon to the notification area while XCSoar runs, to
+         * remind the user that we're sucking his battery empty */
+        Notification notification = new Notification(R.drawable.icon, null,
+                                                     System.currentTimeMillis());
+        Intent intent = new Intent(this, XCSoar.class);
+        PendingIntent contentIntent =
+          PendingIntent.getActivity(this, 0, intent, 0);
+        notification.setLatestEventInfo(this, "XCSoar", "XCSoar is running",
+                                        contentIntent);
+
+        NotificationManager notificationManager = (NotificationManager)
+          getSystemService(Context.NOTIFICATION_SERVICE);
+        notificationManager.notify(1, notification);
     }
 
     @Override protected void onPause() {
@@ -102,6 +120,11 @@ public class XCSoar extends Activity {
 
     @Override protected void onDestroy()
     {
+      /* remove the notification icon */
+      NotificationManager notificationManager = (NotificationManager)
+        getSystemService(Context.NOTIFICATION_SERVICE);
+      notificationManager.cancel(1);
+
         if (nativeView != null)
             nativeView.exitApp();
 
